# agendaProgrammazione

./: CMakeLists.txt  CTestTestfile.cmake  Makefile  TimeTest.cpp  cmake_install.cmake  runAllTests.cpp
Testing/Temporary/: CTestCostData.txt
gtest/: ActivityTest.cpp  CMakeLists.txt  DateTest.cpp
src/: Activity.cpp  Activity.h  ActivityController.cpp  ActivityController.h  ActivityWidget.cpp  ActivityWidget.h  Board.cpp  Board.h  BoardController.cpp  BoardController.h  Date.cpp  Date.h  MainWindow.cpp  MainWindow.h  Observer.h  SubActivity.cpp  SubActivity.h  SubActivityDialog.cpp  SubActivityDialog.h  Subject.h  Time.cpp  Time.h  main.cpp
test/: ActivityTest.cpp  DateTest.cpp  RunAllTests.cpp  TimeTest.cpp
